# Hack-Change_SimbiozTech

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  sample_submission.csv
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_analysis_tables.py  002_make_pred_label_confidence_nullable.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  config.py  db.py
backend/app/models/: __init__.py  analysis.py  base.py
backend/app/schemas/: __init__.py  analysis.py
backend/app/services/: __init__.py  csv_service.py  metrics_service.py  minio_service.py  ml_service.py  storage_service.py  text_preprocessing.py
backend/tests/: test_health.py
frontend/: Dockerfile  README.md  package.json  vite.config.ts
frontend/public/: index.html  sample_reviews.csv  sample_reviews_minimal.csv  sample_reviews_without_labels.csv
frontend/src/: App.tsx
frontend/src/components/analysis/: ClassDistribution.tsx  FiltersPanel.tsx  ResultRow.tsx  ResultsTable.tsx  (+1 more)
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: AnalysisPage.tsx  DashboardPage.tsx  HelpPage.tsx  HistoryPage.tsx  HomePage.tsx  ResultsPage.tsx  ValidationPage.tsx
frontend/src/services/: api.ts  csvService.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  formatters.ts  toast.ts
ml/: Dockerfile  app.py  inference.py  requirements.txt  train_model.py
(+16 files in other folders)
